# serviceowners

./: .gitignore  Cargo.toml  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml
src/: lib.rs  main.rs
src/serviceowners/: action_runner.py  cli.py  errors.py  github_api.py  gitutils.py  impact.py  lint.py  markdown.py  ownership.py  paths.py  patterns.py  serviceowners_file.py  services_file.py
tests/: test_impact.py  test_lint.py  test_match.py  test_paths.py  test_patterns.py
