[package]
name = "serviceowners"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
globset = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
ignore = "0.4"
reqwest = { version = "0.12.25", features = ["blocking", "json", "rustls-tls"] }
serde_json = "1.0.145"
env_logger = "0.11.8"
log = "0.4.29"
