[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "serviceowners"
version = "0.1.0"
description = "Repo-native service ownership mapping (SERVICEOWNERS) + PR impact automation"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "binbandit", email = "binbandit@users.noreply.github.com" }]
keywords = [
  "codeowners",
  "ownership",
  "platform",
  "monorepo",
  "devex",
  "github-actions",
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dependencies = ["PyYAML>=6.0,<7"]

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[project.urls]
Homepage = "https://github.com/binbandit/serviceowners"
Repository = "https://github.com/binbandit/serviceowners"
Issues = "https://github.com/binbandit/serviceowners/issues"

[project.scripts]
sowners = "serviceowners.cli:main"
serviceowners = "serviceowners.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/serviceowners"]
